# raystrack

./: .gitignore  LICENSE  README.md  grasshopper_installer.gh  grasshopper_mac_installer.sh  grasshopper_win_installer.bat  pyproject.toml  setup.py
.github/workflows/: publish.yml
examples/: ex00_street_canyon_geometry.py  ex01_compute_vf.py  ex02_compare_sky_vf.py  ex03_workflow.py  ex04_inside_enclosure.py  ex05_prepared_seed_compare.py  inside_vf_matrix.json  sky_vf_workflow.json  street_canyon.json  vf_matrix.json  vf_scene_workflow.json
raystrack/: __init__.py  io.py  main.py
raystrack.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
raystrack/__pycache__/: main._build_rays-80.py313.1.nbc  main._build_rays-80.py313.nbi  main._build_rays-80.py39.1.nbc  main._build_rays-80.py39.nbi  main._halton-9.py313.1.nbc  main._halton-9.py313.nbi  main._halton-9.py39.1.nbc  main._halton-9.py39.nbi
raystrack/utils/: cuda_trace.py  geometry.py  halton.py  helpers.py  ray_builder.py
raystrack/utils/__pycache__/: halton.cached_halton-16.py312.1.nbc  halton.cached_halton-16.py312.nbi  halton.cached_halton-16.py39.1.nbc  halton.cached_halton-16.py39.nbi  ray_builder.build_rays-18.py39.1.nbc  ray_builder.build_rays-18.py39.nbi  ray_builder.build_rays-6.py312.nbi  (+3 more)
rhino/: example.gh
rhino/components/: raystrack_icons.ai
src/raystrack/: __init__.py  api.py  io.py  main.py  params.py
src/raystrack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_convergence.py  test_diff_90_rect.py  test_diff_rect.py  test_sphere.py  test_stderr_convergence.py
tests/comparison_view3d/: compare_v3d_vf.py  philip_test2_geometry.json  run_vf.py  v3d_results.json  vf_matrix.json
validation/: common_validation.py  generate_canyon_view3d_reference.py  readme.md  run_all.py  validate_01_parallel_equal_square.py  validate_02_parallel_equal_rectangle.py  validate_03_equal_coaxial_discs.py  validate_04_patch_to_disc.py  validate_05_perpendicular_square_rectangle.py  validate_06_canyon_view3d_compare.py
validation/results/: 01_parallel_equal_square.txt  02_parallel_equal_rectangle.txt  03_equal_coaxial_discs.txt  04_patch_to_disc.txt  05_perpendicular_square_rectangle.txt  06_canyon_view3d.txt  06_canyon_view3d_raystrack_base.json  06_canyon_view3d_raystrack_raw.json
validation/view3d_reference/: canyon_view3d.txt  canyon_view3d.vs3  canyon_view3d_base.json  canyon_view3d_raw.json
(+34 files in other folders)
