[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raystrack"
version = "1.0.0"
description = "Lightweight Monte-Carlo view-factor solver with CPU, CUDA and BVH paths"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Philip Balizki", email = "philip.balizki@web.de" }]
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.24,<3.0",
    "numba>=0.59,<0.60",
]

[project.urls]
Homepage = "https://github.com/Philip-rptu/raystrack"