[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raystrack"
version = "1.0.0"
description = "Lightweight Monte-Carlo view-factor solver with CPU, CUDA and BVH paths"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Philip Balizki", email = "philip.balizki@gmail.com" }]
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.24,<3.0",
    "numba>=0.59,<0.60",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/Philip-rptu/raystrack"
