[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raystrack"
version = "1.0.2"
description = "Lightweight Monte-Carlo view-factor solver with CPU, CUDA and BVH paths"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Philip Balizki", email = "philip@metis.earth" }]
requires-python = ">=3.9,<3.13"

dependencies = [
    "numpy>=1.24,<3.0",
    "numba>=0.59,<0.60",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/philip-ba/raystrack"

# Ensure setuptools finds the package in the src/ layout for editable installs
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
  "tests*",
  "examples*",
  "build*",
]
